[project]
name = "lfs-stripe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kai Diefenbach", email = "kai.diefenbach@iqpp.de" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
lfs-stripe = "lfs_stripe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
